@@ -130,6 +130,7 @@ void avcodec_register_all(void)
     REGISTER_DECODER(SVQ3, svq3);
     REGISTER_ENCDEC (TARGA, targa);
     REGISTER_DECODER(THEORA, theora);
+    REGISTER_DECODER(THP, thp);
     REGISTER_DECODER(TIERTEXSEQVIDEO, tiertexseqvideo);
     REGISTER_DECODER(TIFF, tiff);
     REGISTER_DECODER(TRUEMOTION1, truemotion1);
